Sat Sep  7 06:44:47 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (%%handle-system-error): recognise errors thrown
	by lgh-error (fill-message etc.)

Thu Sep  5 11:33:41 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm: %load-path is initialized in C code now.
	(implementation-vicinity, parse-path): Deleted, along with code to
	initialize %load-path.

	* boot-9.scm (in-vicinity): If the vicinity doesn't end with a
	"/", use one to separate it from the file.

Thu Aug 29 23:05:11 1996  Thomas Morgan  <tmorgan@gnu.ai.mit.edu>

	* boot-9.scm (%load-path): Add the site directory.
	Add the directory named after the version number.
	Prepend the version number to the other directories in the path.
	Simplify by mapping the common prefix onto each item.
	* Makefile.in (datadir, pkgdatadir, pkgverdatadir, subpkgdatadir,
	sitedatadir): New definitions.
	(libparent, libdir, install_path): Replaced by above.
	(install): Create the above directories.
	Put the source files into subpkgdatadir.
	(uninstall): Remove the above directories.

Thu Aug 29 21:48:47 1996  Jim Blandy  <jimb@floss.cyclic.com>

	Don't use the PLUGIN system to gather information for the
	Makefile's distribution and installation targets; just put it all
	in the Makefile directly.
	* PLUGIN/this.configure (scm_files, aux_files): Remove sections
	for these.
	* configure.in: Remove code that gets and substitutes scm_files and
	aux_files.
	* Makefile.in (scm_files, aux_files): Write out the list of files
	here, where people expect to find them.

Fri Aug 23 06:44:36 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>

	* boot-9.scm: Preliminary solution: optionally load the debug
	module.  Changed "gls" to "guile1.0b3".

	* debug.scm: New file: debug extensions.

Wed Aug 21 13:06:56 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>

	* boot-9.scm (print-vector): Renamed weak-hash-table? -->
 	weak-key-hash-table?.  (Again!)

Tue Aug 20 07:31:39 1996  Mikael Djurfeldt  <mdj@woody.nada.kth.se>
